--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <string name="title_home">Home</string>
     <string name="title_account">Account</string>
+    <string name="title_search">Search</string>
     <string name="title_bookmark">Bookmark</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
