BookmarkFragment page and NewsDetailsFragment page designed for the details of the news summary.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="title_bookmark">Bookmark</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="news_title_header_tv">Address me as sir or daddy Wizkid</string>
+    <string name="text">Wizkid has blown hot to his colleagues, telling them to address him as sir or daddy. He said he can stop touching microphone today and his colleagues can not touch the wealth he had even if they ask their parents for help and he will soon open a class where he will teach his colleagues</string>
 
 </resources>
